# cpptest

./: .gitignore  .travis.yml  Directory.Build.props  INSTALL.quick.in  NEWS  autogen.sh  check-abi.sh  configure.ac
.github/: dependabot.yml
.github/workflows/: linux.yml
clang/: config.h
cpptest/: .cvsignore  .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL.quick.in  Makefile.am  NEWS  README.in  autogen.sh  check-abi.sh  configure.ac  libcpptest.pc.in
cpptest/config/: config.h.in
cpptest/doc/: .gitignore  Doxyfile.in  Makefile.am  footer.html  header.html  main.dox  test.dox  tutorial.dox
cpptest/doc/images/: html-example.html
cpptest/src/: Makefile.am  collectoroutput.cpp  compileroutput.cpp  cpptest-assert.h  cpptest-collectoroutput.h  cpptest-compileroutput.h  cpptest-htmloutput.h  cpptest-output.h  cpptest-simplecollector.h  cpptest-source.h  cpptest-suite.h  cpptest-textoutput.h  cpptest-time.h  cpptest-xmloutput.h  cpptest.h  htmloutput.cpp  missing.cpp  missing.h  source.cpp  suite.cpp  textoutput.cpp  time.cpp  utils.cpp  utils.h
cpptest/test/: Makefile.am  mytest.cpp
cpptest/win/: config.h
cpptest/win/VisualStudio.NET/cpptest/: cpptest.vcproj
cpptest/win/vs2017/cpptest/: cpptest.vcxproj
cpptest/win/vs2017/test/: test.vcxproj
cpptest/win/vs2019/: VisualStudio2019.sln
doc/: Makefile.am
src/: Makefile.am  cpptest-assert.h  cpptest-simplecollector.h  cpptest-suite.h  cpptest-time.h  cpptest-xmloutput.h  missing.cpp  missing.h  suite.cpp  time.cpp  utils.cpp
test/: mytest.cpp
win/vs2019/cpptest/: cpptest.vcxproj
win/vs2019/test/: test.vcxproj
win/vs2022/cpptest/: cpptest.vcxproj
win/vs2022/test/: test.vcxproj
